--- a/tudouShop/templates/Front/Index.html
+++ b/tudouShop/templates/Front/Index.html
@@ -99,7 +99,8 @@
     <div id="da">
         <div class="shang">
             <span class="zi1">ANRUI International</span>
-            <span class="zi2"><a href="aspx/register.aspx">注册</a>&nbsp;&nbsp;&nbsp;<a href="aspx/login.aspx">登陆</a>&nbsp;&nbsp;&nbsp;<a href="ShoppingCart.aspx">查看购物车</a>&nbsp;&nbsp;&nbsp;<a href="Orders.aspx">已购买的商品</a></span>
+            <p>123</p>
+            <span class="zi2"><a href="aspx/register.aspx">注册</a>&nbsp;&nbsp;&nbsp;<a href="aspx/login.aspx">登陆</a>&nbsp;&nbsp;<a href="ShoppingCart.aspx">查看购物车</a>&nbsp;&nbsp;&nbsp;<a href="Orders.aspx">已购买</a></span>
         </div>
 
         <div id="top">
